Fix spacing regression
closes #1235

--- a/public/popup.css
+++ b/public/popup.css
@@ -475,7 +475,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 130px;
-  margin-right: 8px;
+  margin: 0 8px 0 0;
 }
 
 /*
@@ -531,16 +531,12 @@
 }
 
 /*
- * Generic spacing classes
+ * Generic utilities
  */
 
-.u-mZ {
+ #sponsorBlockPopupBody .u-mZ {
   margin: 0 !important;
 }
-
-/*
- * Generic hide utility classes
- */
 
 #sponsorBlockPopupBody .hidden {
   display: none !important;
